ForeignTable: implement foreign table conversion